@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -46,7 +46,7 @@ import java.security.PrivateKey;
 import java.security.SecureRandom;
 import java.security.cert.Certificate;
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -78,20 +78,14 @@ import org.apache.pulsar.broker.loadbalance.impl.ModularLoadManagerWrapper;
 import org.apache.pulsar.broker.loadbalance.impl.SimpleResourceUnit;
 import org.apache.pulsar.broker.namespace.NamespaceService;
 import org.apache.pulsar.broker.service.BrokerService;
-import org.apache.pulsar.client.impl.auth.AuthenticationTls;
 import org.apache.pulsar.common.naming.NamespaceBundle;
 import org.apache.pulsar.common.naming.ServiceUnitId;
 import org.apache.pulsar.common.naming.TopicName;
 import org.apache.pulsar.common.partition.PartitionedTopicMetadata;
 import org.apache.pulsar.common.policies.data.ClusterData;
-import org.apache.pulsar.common.policies.data.ClusterDataImpl;
 import org.apache.pulsar.common.policies.data.TenantInfoImpl;
 import org.apache.pulsar.common.util.ObjectMapperFactory;
 import org.apache.pulsar.common.util.SecurityUtility;
-import org.apache.pulsar.discovery.service.DiscoveryService;
-import org.apache.pulsar.discovery.service.server.ServiceConfig;
-import org.apache.pulsar.metadata.api.extended.MetadataStoreExtended;
-import org.apache.pulsar.metadata.impl.ZKMetadataStore;
 import org.apache.pulsar.policies.data.loadbalancer.LocalBrokerData;
 import org.apache.pulsar.policies.data.loadbalancer.NamespaceBundleStats;
 import org.asynchttpclient.AsyncCompletionHandler;
@@ -147,12 +141,13 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         /**** start broker-2 ****/
         ServiceConfiguration conf2 = new ServiceConfiguration();
         conf2.setBrokerShutdownTimeoutMs(0L);
+        conf2.setLoadBalancerOverrideBrokerNicSpeedGbps(Optional.of(1.0d));
         conf2.setBrokerServicePort(Optional.of(0));
         conf2.setWebServicePort(Optional.of(0));
         conf2.setAdvertisedAddress("localhost");
         conf2.setClusterName(conf.getClusterName());
-        conf2.setZookeeperServers("localhost:2181");
-        conf2.setConfigurationStoreServers("localhost:3181");
+        conf2.setMetadataStoreUrl("zk:localhost:2181");
+        conf2.setConfigurationMetadataStoreUrl("zk:localhost:3181");
 
         @Cleanup
         PulsarService pulsar2 = startBroker(conf2);
@@ -193,7 +188,7 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         }
 
         Message<byte[]> msg = null;
-        Set<String> messageSet = Sets.newHashSet();
+        Set<String> messageSet = new HashSet<>();
         for (int i = 0; i < 10; i++) {
             msg = consumer.receive(5, TimeUnit.SECONDS);
             String receivedMessage = new String(msg.getData());
@@ -222,10 +217,10 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         @Cleanup("shutdownNow")
         ExecutorService executor = Executors.newFixedThreadPool(10);
         List<Future<?>> list = new ArrayList<>();
+        LocalBrokerData data = loadManager.getLoadManager().updateLocalBrokerData();
+        data.cleanDeltas();
+        data.getBundles().clear();
         for (int i = 0; i < 1000; i++) {
-            LocalBrokerData data = loadManager.getLoadManager().updateLocalBrokerData();
-            data.cleanDeltas();
-            data.getBundles().clear();
             list.add(executor.submit(() -> {
                 try {
                     assertNotNull(loadManager.generateLoadReport());
@@ -263,12 +258,13 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         ServiceConfiguration conf2 = new ServiceConfiguration();
         conf2.setAdvertisedAddress("localhost");
         conf2.setBrokerShutdownTimeoutMs(0L);
+        conf2.setLoadBalancerOverrideBrokerNicSpeedGbps(Optional.of(1.0d));
         conf2.setBrokerServicePort(Optional.of(0));
         conf2.setWebServicePort(Optional.of(0));
         conf2.setAdvertisedAddress("localhost");
         conf2.setClusterName(newCluster); // Broker2 serves newCluster
-        conf2.setZookeeperServers("localhost:2181");
-        conf2.setConfigurationStoreServers("localhost:3181");
+        conf2.setMetadataStoreUrl("zk:localhost:2181");
+        conf2.setConfigurationMetadataStoreUrl("zk:localhost:3181");
         String broker2ServiceUrl = "pulsar://localhost:" + conf2.getBrokerServicePort().get();
 
         admin.clusters().createCluster(newCluster,
@@ -319,7 +315,7 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         }
 
         Message<byte[]> msg = null;
-        Set<String> messageSet = Sets.newHashSet();
+        Set<String> messageSet = new HashSet<>();
         for (int i = 0; i < 10; i++) {
             msg = consumer.receive(5, TimeUnit.SECONDS);
             String receivedMessage = new String(msg.getData());
@@ -356,12 +352,13 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         ServiceConfiguration conf2 = new ServiceConfiguration();
         conf2.setAdvertisedAddress("localhost");
         conf2.setBrokerShutdownTimeoutMs(0L);
+        conf2.setLoadBalancerOverrideBrokerNicSpeedGbps(Optional.of(1.0d));
         conf2.setBrokerServicePort(Optional.of(0));
         conf2.setWebServicePort(Optional.of(0));
         conf2.setAdvertisedAddress("localhost");
         conf2.setClusterName(pulsar.getConfiguration().getClusterName());
-        conf2.setZookeeperServers("localhost:2181");
-        conf2.setConfigurationStoreServers("localhost:3181");
+        conf2.setMetadataStoreUrl("zk:localhost:2181");
+        conf2.setConfigurationMetadataStoreUrl("zk:localhost:3181");
 
         @Cleanup
         PulsarService pulsar2 = startBroker(conf2);
@@ -396,7 +393,7 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         }
 
         Message<byte[]> msg = null;
-        Set<String> messageSet = Sets.newHashSet();
+        Set<String> messageSet = new HashSet<>();
         for (int i = 0; i < 20; i++) {
             msg = consumer.receive(5, TimeUnit.SECONDS);
             assertNotNull(msg, "Message should not be null");
@@ -432,6 +429,7 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         /**** start broker-2 ****/
         ServiceConfiguration conf2 = new ServiceConfiguration();
         conf2.setBrokerShutdownTimeoutMs(0L);
+        conf2.setLoadBalancerOverrideBrokerNicSpeedGbps(Optional.of(1.0d));
         conf2.setAdvertisedAddress("localhost");
         conf2.setBrokerShutdownTimeoutMs(0L);
         conf2.setBrokerServicePort(Optional.of(0));
@@ -443,8 +441,8 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         conf2.setTlsCertificateFilePath(TLS_SERVER_CERT_FILE_PATH);
         conf2.setTlsKeyFilePath(TLS_SERVER_KEY_FILE_PATH);
         conf2.setClusterName(conf.getClusterName());
-        conf2.setZookeeperServers("localhost:2181");
-        conf2.setConfigurationStoreServers("localhost:3181");
+        conf2.setMetadataStoreUrl("zk:localhost:2181");
+        conf2.setConfigurationMetadataStoreUrl("zk:localhost:3181");
 
         @Cleanup
         PulsarService pulsar2 = startBroker(conf2);
@@ -509,335 +507,15 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         con.connect();
         log.info("connected url: {} ", con.getURL());
         // assert connect-url: broker2-https
-        assertEquals(new Integer(con.getURL().getPort()), conf2.getWebServicePortTls().get());
+        assertEquals(Integer.valueOf(con.getURL().getPort()), conf2.getWebServicePortTls().get());
         InputStream is = con.getInputStream();
         // assert redirect-url: broker1-https only
         log.info("redirected url: {}", con.getURL());
-        assertEquals(new Integer(con.getURL().getPort()), conf.getWebServicePortTls().get());
+        assertEquals(Integer.valueOf(con.getURL().getPort()), conf.getWebServicePortTls().get());
         is.close();
 
         loadManager1 = null;
         loadManager2 = null;
-    }
-
-    /**
-     * Discovery-Service lookup over binary-protocol 1. Start discovery service 2. start broker 3. Create
-     * Producer/Consumer: by calling Discovery service for partitionedMetadata and topic lookup
-     *
-     * @throws Exception
-     */
-    @Test
-    public void testDiscoveryLookup() throws Exception {
-
-        // (1) start discovery service
-        ServiceConfig config = new ServiceConfig();
-        config.setServicePort(Optional.of(0));
-        config.setBindOnLocalhost(true);
-
-        @Cleanup
-        DiscoveryService discoveryService = createAndStartDiscoveryService(config);
-
-        // (2) lookup using discovery service
-        final String discoverySvcUrl = discoveryService.getServiceUrl();
-
-        @Cleanup
-        PulsarClient pulsarClient2 = PulsarClient.builder().serviceUrl(discoverySvcUrl).build();
-        Consumer<byte[]> consumer = pulsarClient2.newConsumer().topic("persistent://my-property2/use2/my-ns/my-topic1")
-                .subscriptionName("my-subscriber-name").subscribe();
-        Producer<byte[]> producer = pulsarClient2.newProducer(Schema.BYTES)
-            .topic("persistent://my-property2/use2/my-ns/my-topic1")
-            .create();
-
-        for (int i = 0; i < 10; i++) {
-            String message = "my-message-" + i;
-            producer.send(message.getBytes());
-        }
-
-        Message<byte[]> msg = null;
-        Set<String> messageSet = Sets.newHashSet();
-        for (int i = 0; i < 10; i++) {
-            msg = consumer.receive(5, TimeUnit.SECONDS);
-            String receivedMessage = new String(msg.getData());
-            log.debug("Received message: [{}]", receivedMessage);
-            String expectedMessage = "my-message-" + i;
-            testMessageOrderAndDuplicates(messageSet, receivedMessage, expectedMessage);
-        }
-        // Acknowledge the consumption of all messages at once
-        consumer.acknowledgeCumulative(msg);
-        consumer.close();
-        producer.close();
-
-    }
-
-    /**
-     * Verify discovery-service binary-proto lookup using tls
-     *
-     * @throws Exception
-     */
-    @SuppressWarnings("deprecation")
-    @Test
-    public void testDiscoveryLookupTls() throws Exception {
-
-        final String TLS_SERVER_CERT_FILE_PATH = "./src/test/resources/certificate/server.crt";
-        final String TLS_SERVER_KEY_FILE_PATH = "./src/test/resources/certificate/server.key";
-        final String TLS_CLIENT_CERT_FILE_PATH = "./src/test/resources/certificate/client.crt";
-        final String TLS_CLIENT_KEY_FILE_PATH = "./src/test/resources/certificate/client.key";
-
-        // (1) restart broker1 with tls enabled
-        conf.setBrokerServicePortTls(Optional.ofNullable(0));
-        conf.setWebServicePortTls(Optional.ofNullable(0));
-        conf.setTlsAllowInsecureConnection(true);
-        conf.setTlsCertificateFilePath(TLS_SERVER_CERT_FILE_PATH);
-        conf.setTlsKeyFilePath(TLS_SERVER_KEY_FILE_PATH);
-        conf.setNumExecutorThreadPoolSize(5);
-        stopBroker();
-        startBroker();
-
-        // (2) start discovery service
-        ServiceConfig config = new ServiceConfig();
-        config.setServicePort(Optional.of(0));
-        config.setServicePortTls(Optional.of(0));
-        config.setBindOnLocalhost(true);
-        config.setTlsCertificateFilePath(TLS_SERVER_CERT_FILE_PATH);
-        config.setTlsKeyFilePath(TLS_SERVER_KEY_FILE_PATH);
-
-        @Cleanup
-        DiscoveryService discoveryService = createAndStartDiscoveryService(config);
-
-        // (3) lookup using discovery service
-        final String discoverySvcUrl = discoveryService.getServiceUrlTls();
-
-        Map<String, String> authParams = new HashMap<>();
-        authParams.put("tlsCertFile", TLS_CLIENT_CERT_FILE_PATH);
-        authParams.put("tlsKeyFile", TLS_CLIENT_KEY_FILE_PATH);
-        Authentication auth = new AuthenticationTls();
-        auth.configure(authParams);
-
-        @Cleanup
-        PulsarClient pulsarClient2 = PulsarClient.builder().serviceUrl(discoverySvcUrl).authentication(auth)
-                .enableTls(true).allowTlsInsecureConnection(true).build();
-        Consumer<byte[]> consumer = pulsarClient2.newConsumer().topic("persistent://my-property2/use2/my-ns/my-topic1")
-                .subscriptionName("my-subscriber-name").subscribe();
-        Producer<byte[]> producer = pulsarClient2.newProducer(Schema.BYTES)
-            .topic("persistent://my-property2/use2/my-ns/my-topic1")
-            .create();
-
-        for (int i = 0; i < 10; i++) {
-            String message = "my-message-" + i;
-            producer.send(message.getBytes());
-        }
-
-        Message<byte[]> msg = null;
-        Set<String> messageSet = Sets.newHashSet();
-        for (int i = 0; i < 10; i++) {
-            msg = consumer.receive(5, TimeUnit.SECONDS);
-            String receivedMessage = new String(msg.getData());
-            log.debug("Received message: [{}]", receivedMessage);
-            String expectedMessage = "my-message-" + i;
-            testMessageOrderAndDuplicates(messageSet, receivedMessage, expectedMessage);
-        }
-        // Acknowledge the consumption of all messages at once
-        consumer.acknowledgeCumulative(msg);
-        consumer.close();
-        producer.close();
-
-    }
-
-    @Test
-    public void testDiscoveryLookupAuthAndAuthSuccess() throws Exception {
-
-        // (1) start discovery service
-        ServiceConfig config = new ServiceConfig();
-        config.setServicePort(Optional.of(0));
-        config.setBindOnLocalhost(true);
-        // add Authentication Provider
-        Set<String> providersClassNames = Sets.newHashSet(MockAuthenticationProvider.class.getName());
-        config.setAuthenticationProviders(providersClassNames);
-        // enable authentication and authorization
-        config.setAuthenticationEnabled(true);
-        config.setAuthorizationEnabled(true);
-        config.setZookeeperServers("localhost:2181");
-        config.setConfigurationStoreServers("localhost:3181");
-
-        @Cleanup
-        DiscoveryService discoveryService = createAndStartDiscoveryService(config);
-
-        // (2) lookup using discovery service
-        final String discoverySvcUrl = discoveryService.getServiceUrl();
-        // set authentication data
-        Authentication auth = new Authentication() {
-            private static final long serialVersionUID = 1L;
-
-            @Override
-            public void close() throws IOException {
-            }
-
-            @Override
-            public String getAuthMethodName() {
-                return "auth";
-            }
-
-            @Override
-            public AuthenticationDataProvider getAuthData() throws PulsarClientException {
-                return new AuthenticationDataProvider() {
-                    private static final long serialVersionUID = 1L;
-                };
-            }
-
-            @Override
-            public void configure(Map<String, String> authParams) {
-            }
-
-            @Override
-            public void start() throws PulsarClientException {
-            }
-        };
-
-        @Cleanup
-        PulsarClient pulsarClient = PulsarClient.builder().serviceUrl(discoverySvcUrl).authentication(auth).build();
-        Consumer<byte[]> consumer = pulsarClient.newConsumer().topic("persistent://my-property/use/my-ns/my-topic1")
-                .subscriptionName("my-subscriber-name").subscribe();
-        Producer<byte[]> producer = pulsarClient.newProducer(Schema.BYTES)
-            .topic("persistent://my-property/use/my-ns/my-topic1")
-            .create();
-        for (int i = 0; i < 10; i++) {
-            String message = "my-message-" + i;
-            producer.send(message.getBytes());
-        }
-        Message<byte[]> msg = null;
-        Set<String> messageSet = Sets.newHashSet();
-        for (int i = 0; i < 10; i++) {
-            msg = consumer.receive(5, TimeUnit.SECONDS);
-            String receivedMessage = new String(msg.getData());
-            log.debug("Received message: [{}]", receivedMessage);
-            String expectedMessage = "my-message-" + i;
-            testMessageOrderAndDuplicates(messageSet, receivedMessage, expectedMessage);
-        }
-        // Acknowledge the consumption of all messages at once
-        consumer.acknowledgeCumulative(msg);
-        consumer.close();
-        producer.close();
-    }
-
-    @Test
-    public void testDiscoveryLookupAuthenticationFailure() throws Exception {
-
-        // (1) start discovery service
-        ServiceConfig config = new ServiceConfig();
-        config.setServicePort(Optional.of(0));
-        config.setBindOnLocalhost(true);
-        // set Authentication provider which fails authentication
-        Set<String> providersClassNames = Sets.newHashSet(MockAuthenticationProviderFail.class.getName());
-        config.setAuthenticationProviders(providersClassNames);
-        // enable authentication
-        config.setAuthenticationEnabled(true);
-        config.setAuthorizationEnabled(true);
-
-        @Cleanup
-        DiscoveryService discoveryService = createAndStartDiscoveryService(config);
-        // (2) lookup using discovery service
-        final String discoverySvcUrl = discoveryService.getServiceUrl();
-
-        // set authentication data
-        Authentication auth = new Authentication() {
-            private static final long serialVersionUID = 1L;
-
-            @Override
-            public void close() throws IOException {
-            }
-
-            @Override
-            public String getAuthMethodName() {
-                return "auth";
-            }
-
-            @Override
-            public AuthenticationDataProvider getAuthData() throws PulsarClientException {
-                return new AuthenticationDataProvider() {
-                    private static final long serialVersionUID = 1L;
-                };
-            }
-
-            @Override
-            public void configure(Map<String, String> authParams) {
-            }
-
-            @Override
-            public void start() throws PulsarClientException {
-            }
-        };
-
-        @Cleanup
-        PulsarClient pulsarClient = PulsarClient.builder().serviceUrl(discoverySvcUrl).authentication(auth)
-            .operationTimeout(1000, TimeUnit.MILLISECONDS).build();
-        try {
-            pulsarClient.newConsumer().topic("persistent://my-property/use2/my-ns/my-topic1")
-                    .subscriptionName("my-subscriber-name").subscribe();
-            fail("should have failed due to authentication");
-        } catch (PulsarClientException e) {
-            // Ok: expected
-        }
-    }
-
-    @Test
-    public void testDiscoveryLookupAuthorizationFailure() throws Exception {
-
-        // (1) start discovery service
-        ServiceConfig config = new ServiceConfig();
-        config.setServicePort(Optional.of(0));
-        config.setBindOnLocalhost(true);
-        // set Authentication provider which returns "invalid" appid so, authorization fails
-        Set<String> providersClassNames = Sets.newHashSet(MockAuthorizationProviderFail.class.getName());
-        config.setAuthenticationProviders(providersClassNames);
-        // enable authentication
-        config.setAuthenticationEnabled(true);
-        config.setAuthorizationEnabled(true);
-
-        @Cleanup
-        DiscoveryService discoveryService = createAndStartDiscoveryService(config);
-        // (2) lookup using discovery service
-        final String discoverySvcUrl = discoveryService.getServiceUrl();
-
-        // set authentication data
-        Authentication auth = new Authentication() {
-            private static final long serialVersionUID = 1L;
-
-            @Override
-            public void close() throws IOException {
-            }
-
-            @Override
-            public String getAuthMethodName() {
-                return "auth";
-            }
-
-            @Override
-            public AuthenticationDataProvider getAuthData() throws PulsarClientException {
-                return new AuthenticationDataProvider() {
-                    private static final long serialVersionUID = 1L;
-                };
-            }
-
-            @Override
-            public void configure(Map<String, String> authParams) {
-            }
-
-            @Override
-            public void start() throws PulsarClientException {
-            }
-        };
-
-        @Cleanup
-        PulsarClient pulsarClient = PulsarClient.builder().serviceUrl(discoverySvcUrl).authentication(auth)
-            .operationTimeout(1000, TimeUnit.MILLISECONDS).build();
-        try {
-            pulsarClient.newConsumer().topic("persistent://my-property/use2/my-ns/my-topic1")
-                    .subscriptionName("my-subscriber-name").subscribe();
-            fail("should have failed due to authentication");
-        } catch (PulsarClientException e) {
-            // Ok: expected
-            assertTrue(e instanceof PulsarClientException.LookupException);
-        }
     }
 
     /**
@@ -858,7 +536,7 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
      *
      * @throws Exception
      */
-    @Test(timeOut = 5000)
+    @Test(timeOut = 20000)
     public void testSplitUnloadLookupTest() throws Exception {
 
         log.info("-- Starting {} test --", methodName);
@@ -868,12 +546,13 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         ServiceConfiguration conf2 = new ServiceConfiguration();
         conf2.setAdvertisedAddress("localhost");
         conf2.setBrokerShutdownTimeoutMs(0L);
+        conf2.setLoadBalancerOverrideBrokerNicSpeedGbps(Optional.of(1.0d));
         conf2.setBrokerServicePort(Optional.of(0));
         conf2.setWebServicePort(Optional.of(0));
         conf2.setAdvertisedAddress("localhost");
         conf2.setClusterName(conf.getClusterName());
-        conf2.setZookeeperServers("localhost:2181");
-        conf2.setConfigurationStoreServers("localhost:3181");
+        conf2.setMetadataStoreUrl("zk:localhost:2181");
+        conf2.setConfigurationMetadataStoreUrl("zk:localhost:3181");
 
         @Cleanup
         PulsarService pulsar2 = startBroker(conf2);
@@ -937,7 +616,7 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
                 .subscribe();
 
         NamespaceBundle bundleInBroker1AfterSplit = pulsar2.getNamespaceService().getBundle(TopicName.get(topic2));
-        assertNotEquals(unsplitBundle, bundleInBroker1AfterSplit);
+        assertNotEquals(unsplitBundle, bundleInBroker1AfterSplit.toString());
 
         consumer1.close();
         consumer2.close();
@@ -972,6 +651,7 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
             // (1) Start broker-1
             ServiceConfiguration conf2 = new ServiceConfiguration();
             conf2.setBrokerShutdownTimeoutMs(0L);
+            conf2.setLoadBalancerOverrideBrokerNicSpeedGbps(Optional.of(1.0d));
             conf2.setAdvertisedAddress("localhost");
             conf2.setBrokerShutdownTimeoutMs(0L);
             conf2.setBrokerServicePort(Optional.of(0));
@@ -979,16 +659,19 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
             conf2.setAdvertisedAddress("localhost");
             conf2.setClusterName(conf.getClusterName());
             conf2.setLoadManagerClassName(ModularLoadManagerImpl.class.getName());
-            conf2.setZookeeperServers("localhost:2181");
-            conf2.setConfigurationStoreServers("localhost:3181");
-
-            @Cleanup
-            PulsarService pulsar2 = startBroker(conf2);
+            conf2.setMetadataStoreUrl("zk:localhost:2181");
+            conf2.setConfigurationMetadataStoreUrl("zk:localhost:3181");
+            conf2.setLoadBalancerAutoBundleSplitEnabled(true);
+            conf2.setLoadBalancerAutoUnloadSplitBundlesEnabled(true);
+            conf2.setLoadBalancerNamespaceBundleMaxTopics(1);
 
             // configure broker-1 with ModularLoadManager
             stopBroker();
             conf.setLoadManagerClassName(ModularLoadManagerImpl.class.getName());
             startBroker();
+
+            @Cleanup
+            PulsarService pulsar2 = startBroker(conf2);
 
             pulsar.getLoadManager().get().writeLoadReportOnZookeeper();
             pulsar2.getLoadManager().get().writeLoadReportOnZookeeper();
@@ -1019,6 +702,13 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
             Consumer<byte[]> consumer1 = pulsarClient2.newConsumer().topic(topic1)
                     .subscriptionName("my-subscriber-name").subscribe();
 
+            // there should be more than one topic to trigger split
+            final String topic2 = "persistent://" + namespace + "/topic2";
+            @Cleanup
+            Consumer<byte[]> consumer2 = pulsarClient2.newConsumer().topic(topic2)
+                    .subscriptionName("my-subscriber-name")
+                    .subscribe();
+
             // (4) Broker-1 will own topic-1
             final String unsplitBundle = namespace + "/0x00000000_0xffffffff";
 
@@ -1048,13 +738,13 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
             // broker-2 loadManager is a leader and let it refresh load-report from all the brokers
             pulsar.getLeaderElectionService().close();
 
+            Awaitility.await()
+                    .untilAsserted(() -> pulsar2.getLeaderElectionService().isLeader());
+
             ModularLoadManagerImpl loadManager = (ModularLoadManagerImpl) ((ModularLoadManagerWrapper) pulsar2
                     .getLoadManager().get()).getLoadManager();
 
             updateAllMethod.invoke(loadManager);
-            conf2.setLoadBalancerAutoBundleSplitEnabled(true);
-            conf2.setLoadBalancerAutoUnloadSplitBundlesEnabled(true);
-            conf2.setLoadBalancerNamespaceBundleMaxTopics(0);
             loadManager.checkNamespaceBundleSplit();
 
             // (6) Broker-2 should get the watch and update bundle cache
@@ -1063,15 +753,15 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
             });
 
             // (7) Make lookup request again to Broker-2 which should succeed.
-            final String topic2 = "persistent://" + namespace + "/topic2";
+            final String topic3 = "persistent://" + namespace + "/topic3";
             @Cleanup
-            Consumer<byte[]> consumer2 = pulsarClient2.newConsumer().topic(topic2)
+            Consumer<byte[]> consumer3 = pulsarClient2.newConsumer().topic(topic3)
                     .subscriptionName("my-subscriber-name")
                     .subscribe();
 
             Awaitility.await().untilAsserted(() -> {
                 NamespaceBundle bundleInBroker1AfterSplit = pulsar2.getNamespaceService()
-                        .getBundle(TopicName.get(topic2));
+                        .getBundle(TopicName.get(topic3));
                 assertNotEquals(bundleInBroker1AfterSplit.toString(), unsplitBundle);
             });
         } finally {
@@ -1202,6 +892,7 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
 
     private AsyncHttpClient getHttpClient(String version) {
         DefaultAsyncHttpClientConfig.Builder confBuilder = new DefaultAsyncHttpClientConfig.Builder();
+        confBuilder.setUseProxyProperties(true);
         confBuilder.setFollowRedirect(true);
         confBuilder.setUserAgent(version);
         confBuilder.setKeepAliveStrategy(new DefaultKeepAliveStrategy() {
@@ -1251,17 +942,5 @@ public class BrokerServiceLookupTest extends ProducerConsumerBase {
         public String authenticate(AuthenticationDataSource authData) throws AuthenticationException {
             return "invalid";
         }
-    }
-
-    private DiscoveryService createAndStartDiscoveryService(ServiceConfig config) throws Exception {
-        MetadataStoreExtended localMetadatastore = new ZKMetadataStore(mockZooKeeper);
-        MetadataStoreExtended configMetadatastore = new ZKMetadataStore(mockZooKeeperGlobal);
-        DiscoveryService discoveryService = spy(new DiscoveryService(config));
-        doReturn(localMetadatastore).when(discoveryService).createLocalMetadataStore();
-        doReturn(configMetadatastore).when(discoveryService).createConfigurationMetadataStore();
-        doReturn(localMetadatastore).when(discoveryService).createLocalMetadataStore();
-        doReturn(configMetadatastore).when(discoveryService).createConfigurationMetadataStore();
-        discoveryService.start();
-        return discoveryService;
     }
 }
